Debug game menu errors